--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ description = "Back up the Remarkable tablet and manage custom templates"
 license-file = "LICENSE"
 
 [dependencies]
+color-eyre = "0.6.1"
+eyre = "0.6.7"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 
