--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,9 +9,11 @@ license-file = "LICENSE"
 
 [dependencies]
 color-eyre = "0.6.1"
+directories = "4.0.1"
 eyre = "0.6.7"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
+toml = "0.5.8"
 
 [dev-dependencies]
-insta = "1.12.0"
+insta = "1.13.0"
