--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ eyre = "0.6.7"
 serde = { version = "1.0.136", features = ["derive"] }
 serde_json = "1.0.79"
 toml = "0.5.8"
+tracing = "0.1.32"
+tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
 
 [dev-dependencies]
 insta = "1.13.0"
